--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css">
+	 <link rel="stylesheet" href="slick.css">
 	 <link href="style.css" rel="stylesheet">
 	</head>
 	<body>
@@ -592,8 +592,8 @@
 		<div class="footer-copyright text-center py-3">© Andijon davlat universiteti, 2004-2020. Barcha huquqlar himoyalangan.</div>
 	  </footer>
 	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	  <script src="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js" type="text/javascript"></script>
+	  <script src="jquery.js"></script>
+	  <script src="slick.js" type="text/javascript"></script>
 	  <script src="app.js"></script>
 	</body>
 
