--- a/index.html
+++ b/index.html
@@ -552,6 +552,12 @@
 	  </div>
 
 	  <div class="headline"><h3 class="w-100 bg-dark text-white">Loyihalar</h3></div>
+	  <div class="projects d-flex justify-content-evenly mb-2">
+		  <img src="renes.png" alt="">
+		  <img src="renes.png" alt="">
+		  <img src="renes.png" alt="">
+		  <img src="renes.png" alt="">
+	  </div>
 
 	  <footer class="page-footer font-small bg-dark pt-4 text-white">
 		<div class="container-fluid text-center text-md-left">
