--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<a class="nav-link">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-						  </svg> +998 (90) 123-45-67
+						  </svg> +998 (74) 223-40-27
 					</a>
 				  </li>
 				</ul>
@@ -63,38 +63,133 @@
 		  </nav>
 
 		  <div class="d-flex justify-content-around bg-dark align-items-center">
-			<img height="300px" width="400px" src="flag.png" alt="gerb va bayroq">
+			<img height="300px" width="400px" src="logo.png" alt="gerb va bayroq">
 			<h2 class="text-white text-center">Andijon Davlat universiteti <br> Chet tillar fakulteti</h2>
 			<img height="300px" width="400px" src="logo.jpg" alt="logo">
 		</div>
 
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark menu">
 			<div class="container-fluid">
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link" href="#">Yangiliklar</a>
+				<ul class="navbar-nav me-auto mb-lg-0">
+					<li class="nav-item dropdown">
+						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
+							Yangiliklar
+						</div>
+						  <ul class="dropdown-menu" aria-labelledby="news-list">
+							<div class="col-md-6 b-right">
+								<li class="dropdown-item">Fakultet tarixi</li>
+								<li class="dropdown-item">Dekanat</li>
+								<li class="dropdown-item">Fakultet kengashi</li>
+							</div>
+							<div class="col-md-6">
+									<li class="dropdown-item header">Kafedralar</li>
+									<li class="dropdown-item">1</li>
+									<li class="dropdown-item">2</li>
+									<li class="dropdown-item">3</li>
+									<li class="dropdown-item">4</li>
+									<li class="dropdown-item">5</li>
+									<li class="dropdown-item">6</li>
+									<li class="dropdown-item">7</li>
+							</div>
+						  </ul>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Kafedra tuzilmasi</a>
+					<li class="nav-item dropdown">
+						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
+							Fakultet tuzilmasi
+						</div>
+						  <ul class="dropdown-menu" aria-labelledby="news-list">
+							<div class="col-md-6 b-right">
+								<li class="dropdown-item">Fakultet tarixi</li>
+								<li class="dropdown-item">Dekanat</li>
+								<li class="dropdown-item">Fakultet kengashi</li>
+							</div>
+							<div class="col-md-6">
+									<li class="dropdown-item header">Kafedralar</li>
+									<li class="dropdown-item">1</li>
+									<li class="dropdown-item">2</li>
+									<li class="dropdown-item">3</li>
+									<li class="dropdown-item">4</li>
+									<li class="dropdown-item">5</li>
+									<li class="dropdown-item">6</li>
+									<li class="dropdown-item">7</li>
+							</div>
+						  </ul>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Talabalar</a>
+					<li class="nav-item dropdown">
+						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
+							Faoliyat
+						</div>
+						  <ul class="dropdown-menu" aria-labelledby="news-list">
+							<div class="col-md-6 b-right">
+								<li class="dropdown-item">Fakultet tarixi</li>
+								<li class="dropdown-item">Dekanat</li>
+								<li class="dropdown-item">Fakultet kengashi</li>
+							</div>
+							<div class="col-md-6">
+									<li class="dropdown-item header">Kafedralar</li>
+									<li class="dropdown-item">1</li>
+									<li class="dropdown-item">2</li>
+									<li class="dropdown-item">3</li>
+									<li class="dropdown-item">4</li>
+									<li class="dropdown-item">5</li>
+									<li class="dropdown-item">6</li>
+									<li class="dropdown-item">7</li>
+							</div>
+						  </ul>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Bitiruvchilar</a>
-					  </li>
-					  <li class="nav-item">
-						<a class="nav-link" href="#">Interaktiv xizmatlar</a>
-					  </li>
+					<li class="nav-item dropdown">
+						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
+							Talabalar
+						</div>
+						  <ul class="dropdown-menu" aria-labelledby="news-list">
+							<div class="col-md-6 b-right">
+								<li class="dropdown-item">Fakultet tarixi</li>
+								<li class="dropdown-item">Dekanat</li>
+								<li class="dropdown-item">Fakultet kengashi</li>
+							</div>
+							<div class="col-md-6">
+									<li class="dropdown-item header">Kafedralar</li>
+									<li class="dropdown-item">1</li>
+									<li class="dropdown-item">2</li>
+									<li class="dropdown-item">3</li>
+									<li class="dropdown-item">4</li>
+									<li class="dropdown-item">5</li>
+									<li class="dropdown-item">6</li>
+									<li class="dropdown-item">7</li>
+							</div>
+						  </ul>
+					</li>
+					<li class="nav-item dropdown">
+						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
+							O'quv jarayoni
+						</div>
+						  <ul class="dropdown-menu" aria-labelledby="news-list">
+							<div class="col-md-6 b-right">
+								<li class="dropdown-item">Fakultet tarixi</li>
+								<li class="dropdown-item">Dekanat</li>
+								<li class="dropdown-item">Fakultet kengashi</li>
+							</div>
+							<div class="col-md-6">
+									<li class="dropdown-item header">Kafedralar</li>
+									<li class="dropdown-item">1</li>
+									<li class="dropdown-item">2</li>
+									<li class="dropdown-item">3</li>
+									<li class="dropdown-item">4</li>
+									<li class="dropdown-item">5</li>
+									<li class="dropdown-item">6</li>
+									<li class="dropdown-item">7</li>
+							</div>
+						  </ul>
+					</li>
 				</ul>
 			  </div>
 			</div>
 		  </nav>
-
+		  <!-- navigation end-->
 		  <div id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
@@ -187,6 +282,7 @@
 		  </div>
 	</div>
 	<div class="headline"><h3 class="w-100 bg-dark text-white">Yangiliklar</h3></div>
+	<div class="d-flex flex-row justify-content-start">
 	<div class="card mb-3">
 		<img class="card-image-top" src="1.jpg" alt="#">
 		<div class="card-body">
@@ -198,6 +294,7 @@
 			  </svg> 18</span></small></div>
 		</div>
 	</div>
+
 	<div class="card mb-3">
 		<img class="card-image-top" src="2.jpg" alt="#">
 		<div class="card-body">
@@ -209,6 +306,8 @@
 			  </svg> 22</span></small></div>
 		</div>
 	</div>
+	</div>
+	
 	<div class="card mb-3">
 		<img class="card-image-top" src="3.jpg" alt="#">
 		<div class="card-body">
@@ -218,10 +317,49 @@
 				<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
 				<path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
 			  </svg> 11</span></small></div>
+	</div>
+	</div>
+	
+</div>
+<div class="d-flex flex-row justify-content-start">
+	<div class="card mb-3">
+		<img class="card-image-top" src="1.jpg" alt="#">
+		<div class="card-body">
+			<div class="card-tile">Ijtimoiy tarmoqda...</div>
+			<div class="card-text">e'lon qilingan postga andijon davlat universitetidan rasmiy munosabat</div>
+			<div class="card-text"><small class="text-muted">16 Dekabr <span class="float-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+				<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+				<path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+			  </svg> 18</span></small></div>
+		</div>
+	</div>
+
+	<div class="card mb-3">
+		<img class="card-image-top" src="2.jpg" alt="#">
+		<div class="card-body">
+			<div class="card-tile">Ijtimoiy tarmoqda...</sdiv>
+			<div class="card-text">e'lon qilingan postga andijon davlat universitetidan rasmiy munosabat</div>
+			<div class="card-text"><small class="text-muted">16 Dekabr <span class="float-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+				<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+				<path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+			  </svg> 22</span></small></div>
 		</div>
 	</div>
 	</div>
 	
+	<div class="card mb-3">
+		<img class="card-image-top" src="3.jpg" alt="#">
+		<div class="card-body">
+			<div class="card-tile">Ijtimoiy tarmoqda...</div>
+			<div class="card-text">e'lon qilingan postga andijon davlat universitetidan rasmiy munosabat</div>
+			<div class="card-text"><small class="text-muted">16 Dekabr <span class="float-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+				<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+				<path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+			  </svg> 11</span></small></div>
+	</div>
+	</div>
+	
+</div>
 	<div class="headline"><h3 class="w-100 bg-dark text-white">Dars Jadvali</h3></div>
 	<table class="table table-responsive mb-3">
 		<thead>
@@ -558,42 +696,40 @@
 		  <img src="renes.png" alt="">
 		  <img src="renes.png" alt="">
 	  </div>
+	  <div class="unknown-title mb-3"></div>
+	  <div class="d-flex d-row justify-content-evenly mb-3">
+		  <img src="edu.png" alt="">
+		  <img src="portal.png" alt="">
+		  <img src="ziyonet.png" alt="">
+		  <img src="matbuot.png" alt="">
+	  </div>
 
 	  <footer class="page-footer font-small bg-dark pt-4 text-white">
 		<div class="container-fluid text-center text-md-left">
-		  <div class="row">
+		  <div class="row p-0">
 			<div class="col-md-3 mb-md-0 mb-3">
-				<img src="adu_map.jpg" alt="Xarita">
+				<img class="img-fluid" src="adu_map.jpg" alt="Xarita">
 			</div>
 			<div class="col-md-6 mt-md-0 mt-3">
 			  <h5 class="text-uppercase">MANZILIMIZ</h5>
 			  <p>170100, O'zbekiston Respublikasi, Andijon shahar,<br>
-				Universitet ko'chasi 129-uy <br>
+				Bobur shox ko'chasi 5-uy <br>
 				E-pochta: agsu_info@edu.uz <br>
-				Telefon/faks: 0 (374) 223 88 30 <br>
-				Ishonch telefon: 0 (374) 223 88 14 <br>
-				Transport: 75-yo'nalishdagi taksilar <br>
+				Telefon/faks:  +998 (74) 223-40-27 <br>
 			  </p>
 			</div>
-			<hr class="clearfix w-100 d-md-none pb-3">
-			<div class="col-md-3 mb-md-0 mb-3">
-			  <h5 class="text-uppercase">Menu</h5>
-	  
-			  <ul class="list-unstyled">
-				<li>
-				  <a  class="text-decoration-none text-white" href="#!">Kafedralar</a>
-				</li>
-				<li>
-					<a  class="text-decoration-none text-white" href="#!">Dars Jadvali</a>
-				</li>
-				<li>
-					<a  class="text-decoration-none text-white" href="#!">Yangiliklar</a>
-				</li>
-				<li>
-					<a  class="text-decoration-none text-white" href="#!">Biz haqimida</a>
-				</li>
-			  </ul>
-	  
+			<div class="col-md-3 mb-md-0 mb-3 social">
+				<h4>Biz ijtimoiy tarmoqlarda!</h4>
+				<div class="d-flex flex-row justify-content-around mb-3">
+					<img src="telegram.svg" alt="telegram">
+					<img src="telegrambot.svg" alt="telegram">
+					<img src="instagram.svg" alt="telegram">
+				</div>
+				<div class="d-flex flex-row justify-content-around">
+					<img src="twitter.svg" alt="telegram">
+					<img src="facebook.svg" alt="telegram">
+					<img src="youtube.svg" alt="telegram">
+				</div>
 			</div>
 		<div class="footer-copyright text-center py-3">© Andijon davlat universiteti, 2004-2020. Barcha huquqlar himoyalangan.</div>
 	  </footer>
