--- a/index.html
+++ b/index.html
@@ -81,19 +81,18 @@
 						</div>
 						  <ul class="dropdown-menu" aria-labelledby="news-list">
 							<div class="col-md-6 b-right">
-								<li class="dropdown-item">Fakultet tarixi</li>
-								<li class="dropdown-item">Dekanat</li>
-								<li class="dropdown-item">Fakultet kengashi</li>
+								<li class="dropdown-item header">Universitet yangiliklari</li>
+								<li class="dropdown-item">Elonlar</li>
 							</div>
 							<div class="col-md-6">
-									<li class="dropdown-item header">Kafedralar</li>
-									<li class="dropdown-item">1</li>
-									<li class="dropdown-item">2</li>
-									<li class="dropdown-item">3</li>
-									<li class="dropdown-item">4</li>
-									<li class="dropdown-item">5</li>
-									<li class="dropdown-item">6</li>
-									<li class="dropdown-item">7</li>
+									<li class="dropdown-item header">Ommaviy tadbirlar</li>
+									<li class="dropdown-item">yig'ilishlar</li>
+									<li class="dropdown-item">Uchrashuvlar</li>
+									<li class="dropdown-item">Matbuot anjumanlari</li>
+									<li class="dropdown-item">Seminarlar</li>
+									<li class="dropdown-item">Davra suxbatlari</li>
+									<li class="dropdown-item">Rasmiy tashriflar</li>
+									<li class="dropdown-item">Brifinglar</li>
 							</div>
 						  </ul>
 					</li>
@@ -102,64 +101,70 @@
 							Fakultet tuzilmasi
 						</div>
 						  <ul class="dropdown-menu" aria-labelledby="news-list">
-							<div class="col-md-6 b-right">
-								<li class="dropdown-item">Fakultet tarixi</li>
-								<li class="dropdown-item">Dekanat</li>
-								<li class="dropdown-item">Fakultet kengashi</li>
+							<div>
+								<li class="dropdown-item header">Dekanat</li>
+								<li class="dropdown-item">Dekanat nizomi</li>
+								<li class="dropdown-item">Dekanat tarixi</li>
+								<li class="dropdown-item">Dekanat tuzilmasi</li>
 							</div>
-							<div class="col-md-6">
-									<li class="dropdown-item header">Kafedralar</li>
-									<li class="dropdown-item">1</li>
-									<li class="dropdown-item">2</li>
-									<li class="dropdown-item">3</li>
-									<li class="dropdown-item">4</li>
-									<li class="dropdown-item">5</li>
-									<li class="dropdown-item">6</li>
-									<li class="dropdown-item">7</li>
+							<div>
+								<li class="dropdown-item header">Kafedralar</li>
+								<li class="dropdown-item">Ingiliz tili grammatikasi</li>
+								<li class="dropdown-item">Nemis tili va adabiyoti</li>
+								<li class="dropdown-item">Fransuz tili va adabiyoti</li>
+								<li class="dropdown-item">Ingliz tili va adabiyoti</li>
+								<li class="dropdown-item">Ingliz tili fonetikasi</li>
+								<li class="dropdown-item">Fakultetlararo chet tillar (aniq va tabiiy fanlar)</li>
+								<li class="dropdown-item">Fakultetlararo chet tillar (ijtimoiy-gumanitar fanlar)</li>
 							</div>
 						  </ul>
 					</li>
-					<li class="nav-item dropdown">
+					<li class="nav-item dropdown menu-align">
 						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
 							Faoliyat
 						</div>
 						  <ul class="dropdown-menu" aria-labelledby="news-list">
-							<div class="col-md-6 b-right">
-								<li class="dropdown-item">Fakultet tarixi</li>
-								<li class="dropdown-item">Dekanat</li>
-								<li class="dropdown-item">Fakultet kengashi</li>
+							<div>
+								<li class="dropdown-item header">Ilmiy faoliyat</li>
 							</div>
-							<div class="col-md-6">
-									<li class="dropdown-item header">Kafedralar</li>
-									<li class="dropdown-item">1</li>
-									<li class="dropdown-item">2</li>
-									<li class="dropdown-item">3</li>
-									<li class="dropdown-item">4</li>
-									<li class="dropdown-item">5</li>
-									<li class="dropdown-item">6</li>
-									<li class="dropdown-item">7</li>
+							<div>
+									<li class="dropdown-item header">Halqaro aloqalar</li>
+							</div>
+							<div>
+								<li class="dropdown-item header">ma'naviy va ma'rifiy</li>
 							</div>
 						  </ul>
 					</li>
-					<li class="nav-item dropdown">
+					<li class="nav-item dropdown menu-align">
 						<div class="dropdown-toggle nav-link" type="button" id="news-list" data-bs-toggle="dropdown" aria-expanded="false">
 							Talabalar
 						</div>
 						  <ul class="dropdown-menu" aria-labelledby="news-list">
 							<div class="col-md-6 b-right">
-								<li class="dropdown-item">Fakultet tarixi</li>
-								<li class="dropdown-item">Dekanat</li>
-								<li class="dropdown-item">Fakultet kengashi</li>
+								<li class="dropdown-item header">Bakalavriyat</li>
+								<li class="dropdown-item">To'lov kontrakt miqdori</li>
+								<li class="dropdown-item">Yo'riqnoma</li>
+								<li class="dropdown-item">Dars jadvali</li>
+								<li class="dropdown-item">O'zlashtirish</li>
+								<li class="dropdown-item">Davomat</li>
+								<li class="dropdown-item">Iqtidorli talabalar</li>
+								<li class="dropdown-item">Stipendiyalar</li>
+								<li class="dropdown-item">Talabalar turar joylari</li>
+								<li class="dropdown-item">Davlat imtihonlari</li>
+								<li class="dropdown-item">Bitiruv malakaviy ish himoyasi</li>
 							</div>
 							<div class="col-md-6">
-									<li class="dropdown-item header">Kafedralar</li>
-									<li class="dropdown-item">1</li>
-									<li class="dropdown-item">2</li>
-									<li class="dropdown-item">3</li>
-									<li class="dropdown-item">4</li>
-									<li class="dropdown-item">5</li>
-									<li class="dropdown-item">6</li>
-									<li class="dropdown-item">7</li>
+								<li class="dropdown-item header">Magistratura</li>
+								<li class="dropdown-item">Yo'riqnoma</li>
+								<li class="dropdown-item">Dars jadvali</li>
+								<li class="dropdown-item">O'zlashtirish</li>
+								<li class="dropdown-item">Davomat</li>
+								<li class="dropdown-item">Iqtidorli talabalar</li>
+								<li class="dropdown-item">Stipendiyalar</li>
+								<li class="dropdown-item">Talabalar turar joylari</li>
+								<li class="dropdown-item">Davlat imtihonlari</li>
+								<li class="dropdown-item">Dissertatsiya mavzulari to'g'risidagi e'lonlar</li>
+								<li class="dropdown-item">Dissertatsiya himoyasi</li>
 							</div>
 						  </ul>
 					</li>
@@ -168,20 +173,10 @@
 							O'quv jarayoni
 						</div>
 						  <ul class="dropdown-menu" aria-labelledby="news-list">
-							<div class="col-md-6 b-right">
-								<li class="dropdown-item">Fakultet tarixi</li>
-								<li class="dropdown-item">Dekanat</li>
-								<li class="dropdown-item">Fakultet kengashi</li>
-							</div>
-							<div class="col-md-6">
-									<li class="dropdown-item header">Kafedralar</li>
-									<li class="dropdown-item">1</li>
-									<li class="dropdown-item">2</li>
-									<li class="dropdown-item">3</li>
-									<li class="dropdown-item">4</li>
-									<li class="dropdown-item">5</li>
-									<li class="dropdown-item">6</li>
-									<li class="dropdown-item">7</li>
+							<div>
+								<li class="dropdown-item header">Ta'lim shakllari</li>
+								<li class="dropdown-item">Bakalavriyat</li>
+								<li class="dropdown-item">Magistratura</li>
 							</div>
 						  </ul>
 					</li>
@@ -237,29 +232,29 @@
 			</a>
 		  </div>
 		  <div class="headline"><h3 class="w-100 bg-dark text-white">Kafedralar</h3></div>
-		  <div class="row">
+		  <div class="d-flex flex-row justify-content-evenly">
 			  	<div class="card border-0" style="width: 15rem;">
 					<img src="english.jpg" class="card-image-top" alt="">
 					<div class="card-body p-1">
-						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Ingiliz tili <br> va grammatikasi</a>
+						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Ingiliz tili <br> grammatikasi</a>
 					</div>
 				</div>
 				<div class="card border-0" style="width: 15rem;">
 					<img src="german.jpg" class="card-image-top" alt="">
 					<div class="card-body p-1">
-						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Nemis tili</a>
+						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Nemis tili va adabiyoti</a>
 					</div>
 				</div>
 				<div class="card border-0" style="width: 15rem;">
 					<img src="french.jpg" class="card-image-top" alt="">
 					<div class="card-body p-1">
-						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Fransuz tili</a>
+						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Fransuz tili va adabiyoti</a>
 					</div>
 				</div>
 				<div class="card border-0" style="width: 15rem;">
 					<img src="humanitarian.png" class="card-image-top" alt="">
 					<div class="card-body p-1">
-						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Ijtimoiy-gumanitar fanlar</a>
+						<a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Fakultetlararo chet tillar (ijtimoiy-gumanitar fanlar)</a>
 					</div>
 				</div>
 			<div class="card border-0" style="width: 15rem;">
@@ -271,18 +266,18 @@
 		  <div class="card border-0" style="width: 15rem;">
 			  <img src="shakespeare.jpg" class="card-image-top" alt="">
 			  <div class="card-body p-1">
-				  <a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Ingiliz tili adabiyoti</a>
+				  <a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Ingliz tili va adabiyoti</a>
 			  </div>
 		  </div>
 		  <div class="card border-0" style="width: 15rem;">
 			  <img src="science.png" class="card-image-top" alt="">
 			  <div class="card-body p-1">
-				  <a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;">Aniq va tabiiy fanlar</a>
+				  <a href="#" class="btn center d-md-block fw-bold" style="width: 14rem;"> Fakultetlararo chet tillar (aniq va tabiiy fanlar)</a>
 			  </div>
 		  </div>
 	</div>
 	<div class="headline"><h3 class="w-100 bg-dark text-white">Yangiliklar</h3></div>
-	<div class="d-flex flex-row justify-content-start">
+	<div class="d-flex flex-row justify-content-start news">
 	<div class="card mb-3">
 		<img class="card-image-top" src="1.jpg" alt="#">
 		<div class="card-body">
@@ -321,7 +316,7 @@
 	</div>
 	
 </div>
-<div class="d-flex flex-row justify-content-start">
+<div class="d-flex flex-row justify-content-start news">
 	<div class="card mb-3">
 		<img class="card-image-top" src="1.jpg" alt="#">
 		<div class="card-body">
